# mitch

./: .gitignore  LICENSE  README.md  messaging.md
bins/: default-bilingeo.csv  default-lingaussian.csv  default-lingeoflat.csv  default-trilinear.csv
ids/: asset-classes.csv  commodities.csv  crypto-assets.csv  equities.csv  forex.csv  indices.csv  instrument-types.csv  market-providers.csv  overview.md  sovereign-debt.csv
impl/: ffi.md
impl/c/: mitch.h
impl/cpp/: mitch.hpp
impl/csharp/: Mitch.cs
impl/examples/: example.mq4  example.rs  example.ts
impl/go/: go.mod  mitch.go
impl/java/: Mitch.java
impl/libs/: libmitch.dylib
impl/mql4/: mitch.mq4
impl/python/: pyproject.toml
impl/python/mitch/: __init__.py  codec.py
impl/python/tests/: test_mitch.py
impl/rust/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build.sh  build_lib.sh
impl/rust/examples/: MitchMT4.mqh
impl/rust/src/: bar.rs  body.rs  channel.rs  common.rs  constants.rs  frame.rs  header.rs  heartbeat.rs  index.rs  lib.rs  market_providers.rs  order.rs  order_book.rs  tick.rs  ticker.rs  timestamp.rs  trade.rs
impl/rust/tests/: channel_test.rs  constants_codegen_test.rs  constants_test.rs  header_test.rs  index_test.rs  lib_test.rs  mod.rs  order_book_test.rs  order_test.rs  tick_test.rs  ticker_test.rs  trade_test.rs
impl/typescript/: mitch.ts  package.json
impl/zig/: mitch.zig
itch/: README.md
model/: bar.md  framing.md  index.md  order-book.md  order.md  overview.md  tick.md  ticker.md  trade.md
