[package]
name = "mitch"
version = "0.1.0"
edition = "2021"
authors = ["BTR Supply <support@btr.supply>"]
description = "MITCH (Moded ITCH) protocol implementation in Rust"
license = "MIT"
keywords = ["finance", "market-data", "high-frequency", "low-latency"]
categories = ["encoding"]

[lib]
name = "mitch"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
lazy_static = { version = "1.4", optional = true }
libc = { version = "0.2", optional = true }
chrono = "0.4"
bytemuck = { version = "1.0", features = ["derive", "min_const_generics"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"  # Required for FFI safety

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[features]
default = ["std"]
std = []
no_std = []
ffi = ["lazy_static", "libc"]
bytemuck = ["dep:bytemuck"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi", "processthreadsapi"], optional = true }
